# flowbot

./: README.md  README_backup copy.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/flowbit_nav/lib/flowbit_nav/: destination_controller  flowbit_nav  goal_pose_pub  initialpose_pub  robot_server
install/flowbit_nav/share/flowbit_nav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/flowbit_nav/: package.xml  setup.cfg  setup.py
src/flowbit_nav/flowbit_nav/: destination_controller.py  flowbit_nav.py  goal_pose_pub.py  initialpose_pub.py  robot_server.py
src/flowbit_nav/flowbit_nav/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/flowbit_nav/flowbit_nav/log/: latest_build
web/: index.html
