[develop]
script_dir=$base/lib/flowbit_nav
[install]
install_scripts=$base/lib/flowbit_nav

[options]                 #  ?  ADD THIS BLOCK
packages = find:          #  install the Python package
install_requires =
    setuptools            #  always keep this


[options.entry_points]
console_scripts =
    flowbit_nav = flowbit_nav.flowbit_nav:main
